@@ -33,7 +33,7 @@ case "${1}" in
    start)
       # Make sure /run/var is available before logging any messages
       if ! mountpoint /run >/dev/null; then
-         mount -n /run || failed=1
+         mount /run || failed=1
       fi
 
       mkdir -p /run/var /run/lock /run/shm
@@ -43,17 +43,17 @@ case "${1}" in
 
       if ! mountpoint /proc >/dev/null; then
          log_info_msg2 " ${INFO}/proc"
-         mount -n -o nosuid,noexec,nodev /proc || failed=1
+         mount -o nosuid,noexec,nodev /proc || failed=1
       fi
 
       if ! mountpoint /sys >/dev/null; then
          log_info_msg2 " ${INFO}/sys" 
-         mount -n -o nosuid,noexec,nodev /sys || failed=1
+         mount -o nosuid,noexec,nodev /sys || failed=1
       fi
 
       if ! mountpoint /dev >/dev/null; then
          log_info_msg2 " ${INFO}/dev" 
-         mount -n -o mode=0755,nosuid /dev  || failed=1
+         mount -o mode=0755,nosuid /dev  || failed=1
       fi
 
       # Copy devices that Udev >= 155 doesn't handle to /dev
