@@ -36,6 +36,16 @@
     </listitem>
 -->
     <listitem>
+      <para>2013-05-15</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Remove unnecessary options in bootscripts
+          due to mtab change.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2013-05-14</para>
       <itemizedlist>
         <listitem>
